# maxc-utils

./: .clang-format  CMakeLists.txt  CMakePresets.json
src/: main.cpp  types.h
src/result/: error.h  result.h  single-result.h
src/string/: strfmt.h
